# codelearn

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml  release.yml
.trae/specs/build-cross-platform-codelearning-platform/: checklist.md  spec.md  tasks.md
courses/: README.md  cpp.ts  css.ts  go.ts  html.ts  index.ts  java.ts  javascript.ts  php.ts  python.ts  ruby.ts  rust.ts  types.ts  typescript.ts
docs/: adding-a-language.md  migrating-backend.md
go-runner/: Dockerfile  README.md  execute.go  fly.toml  go.mod  main.go  proc_unix.go  proc_windows.go  render.yaml  rlimit_linux.go  rlimit_other.go
src-tauri/: Cargo.toml  README.md  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: execute.rs  lib.rs  main.rs  runtime.rs
supabase/functions/run-code/: index.ts
supabase/migrations/: 20260711000001_schema.sql  20260711000002_security_fix.sql  20260711000003_auto_first_admin.sql  20260711000004_enable_realtime.sql  20260711000005_reset_database.sql  20260711000006_review_schedule.sql  20260711000007_admin_settings.sql  20260711000008_balance_stats_models.sql  20260712000001_account_linking.sql  20260712000002_fix_is_admin_ambiguous.sql
web/: .env.example  .eslintrc.cjs  index.html  package.json  tsconfig.json  vite.config.ts
web/docs/: BACKEND_MIGRATION.md
web/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
web/src/ai/: AIProvider.ts  AIService.ts  OpenAICompatibleProvider.ts  PaymentService.ts  (+3 more)
web/supabase/: schema.sql
(+84 files in other folders)
