[package]
name = "codelearn"
version = "0.1.0"
description = "CodeLearn - 免费、跨平台、AI 辅助的编程学习平台"
authors = ["CodeLearn"]
edition = "2021"
rust-version = "1.77"

# Tauri 2.0 桌面端后端，lib 与 bin 共用本 crate。
[lib]
name = "codelearn_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# wait_timeout 提供跨平台子进程超时等待（Unix 用 alarm/SIGCHLD，
# Windows 用 WaitForSingleObject）。execute.rs 用其实现运行超时杀进程。
wait-timeout = "0.2"

# libc 用于 Unix 下 kill(-pgid, SIGKILL) 终止进程组（含孙进程），
# 对标 go-runner/proc_unix.go 的 syscall.Kill(-pid, SIGKILL)。
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
